--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>Wholesome Cinema Club</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Bebas+Neue&family=Dorsa&family=Six+Caps&family=Stint+Ultra+Condensed&family=Teko:wght@300&family=Wire+One&display=swap" rel="stylesheet">
-    <script src="/assets/js/main.js"></script> 
+    <script src="assets/js/main.js"></script> 
   </head>
   <body>
       <div class="container">
