--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Bebas+Neue&family=Dorsa&family=Six+Caps&family=Stint+Ultra+Condensed&family=Teko:wght@300&family=Wire+One&display=swap" rel="stylesheet">
-    <script src="assets/js/main.js"></script> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Bebas+Neue&family=Dorsa&family=Six+Caps&family=Stint+Ultra+Condensed&family=Teko&family=Wire+One&display=swap">
   </head>
   <body>
       <div class="container">
@@ -19,5 +18,6 @@
         <hr>
         <div class="nav">food|film|tech</div>
       </div>
+      <script src="assets/js/main.js" aync></script> 
   </body>
 </html>
