--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>Wholesome Cinema Club</title>
+    <title>Wholesome Cinema Club - food&film&tech</title>
+    <meta name="description" content="Now showing: CRM engineering, email marketing and web development.">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Bebas+Neue&family=Dorsa&family=Six+Caps&family=Stint+Ultra+Condensed&family=Teko&family=Wire+One&display=swap">
   </head>
   <body>
       <div class="container">
@@ -15,8 +13,11 @@
         <div id="some" class="logo" data-text="some"><span>SOME</span></div>
         <div id="cinema" class="logo" data-text="cinema"><span>CINEMA</span></div>
         <div id="club" class="logo" data-text="club"><span>CLUB</span></div>
-        <hr>
         <div class="nav">food|film|tech</div>
+        <div>
+          <p>Wholesome Cinema Club is equally at home cooking comfort food or serving up quality code. <u>Now showing</u>: CRM engineering, email marketing and web development.</p>
+          <p><a href="mailto:tickets@wholesomecinema.club" target="_black">contact</a></p>
+        </div>
       </div>
       <script src="assets/js/main.js" aync></script> 
   </body>
