--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="club" class="logo" data-text="club"><span>CLUB</span></div>
         <div class="nav">food|film|tech</div>
         <div>
-          <p>Wholesome Cinema Club is equally at home cooking comfort food or serving up quality code. <u>Now showing</u>: CRM engineering, email marketing and web development.</p>
+          <p>Wholesome Cinema Club is equally at home cooking comfort food or serving up quality code. We believe in getting things done, to always look for creative solutions, and to never stop learning. <u>Now showing</u>: CRM engineering, email marketing and web development.</p>
           <p><a href="mailto:tickets@wholesomecinema.club" target="_black">contact</a></p>
         </div>
       </div>
