--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="nav">food|film|tech</div>
         <div>
           <p>Wholesome Cinema Club is equally at home cooking comfort food or serving up quality code. We believe in getting things done, to always look for creative solutions, and to never stop learning.</p>
-	  <p><u>Now showing</u>:<br>
+	  <p>Now showing:<br>
 		- CRM engineering<br>
 		- Email marketing/development<br>
 		- Web development.</p>
