--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         <div class="nav">food|film|tech</div>
         <div>
           <p>Wholesome Cinema Club is equally at home cooking comfort food or serving up quality code. We believe in getting things done, to always look for creative solutions, and to never stop learning.</p>
-	  <p><span class="nowshowing">Now showing:</span><br>
+	  <p><span class="nowshowing">Now showing:</span>
+		<div>
 		- CRM engineering<br>
 		- Email marketing/development<br>
-		- Web development.</p>
+		- Web development.
+		</div>
+	  </p>
           <p><a href="mailto:tickets@wholesomecinema.club" target="_black">contact</a></p>
         </div>
       </div>
