New fonts+contact details+dark mode

--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
         <div id="some" class="logo" data-text="some"><span>SOME</span></div>
         <div id="cinema" class="logo" data-text="cinema"><span>CINEMA</span></div>
         <div id="club" class="logo" data-text="club"><span>CLUB</span></div>
-        <div class="nav">food|film|tech</div>
-        <div>
-          <p>Wholesome Cinema Club is equally at home cooking comfort food or serving up quality code. We believe in getting things done, to always look for creative solutions, and to never stop learning.</p>
-	  <p><span class="nowshowing">Now showing:</span>
-		<div>
-		- CRM engineering<br>
-		- Email marketing/development<br>
-		- Web development.
-		</div>
-	  </p>
-          <p><a href="mailto:tickets@wholesomecinema.club" target="_black">contact</a></p>
+        <div class="line">
+        <span>food|film|tech</span>
+        <p>Wholesome Cinema Club is equally at home cooking comfort food or serving up quality code. We believe in getting things done, to always look for creative solutions, and to never stop learning.</p>
         </div>
+        <span>Now showing:</span>
+        <div class="line">
+          - CRM engineering<br>
+          - Email marketing/development<br>
+          - Web development
+        </div>
+        <div class="line">
+          <a href="https://www.linkedin.com/in/zebvandeven/" target="_black"><span class="material-icons">assignment_ind</span></a> <a href="mailto:tickets@wholesomecinema.club" target="_black"><span class="material-icons">email</span></a> <span id="darkmode" class="material-icons">dark_mode</span>
+        </div>
+        <div class="copyright">© wholesomecinemaclub</div>
       </div>
       <script src="assets/js/main.js" aync></script> 
   </body>
