Updated text | added menu | added font

--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>Wholesome Cinema Club - food&film&tech</title>
+    <title>Wholesome Cinema Club</title>
     <meta name="description" content="Now showing: CRM engineering, email marketing and web development.">
     <link rel="stylesheet" href="assets/css/main.css">
   </head>
   <body>
       <div class="container">
-        <div id="whole" class="logo" data-text="whole"><span>WHOLE</span></div>
-        <div id="some" class="logo" data-text="some"><span>SOME</span></div>
-        <div id="cinema" class="logo" data-text="cinema"><span>CINEMA</span></div>
-        <div id="club" class="logo" data-text="club"><span>CLUB</span></div>
+        <div id="logo">
+          <div id="whole" class="logo" data-text="whole"><span>WHOLE</span></div>
+          <div id="some" class="logo" data-text="some"><span>SOME</span></div>
+          <div id="cinema" class="logo" data-text="cinema"><span>CINEMA</span></div>
+          <div id="club" class="logo" data-text="club"><span>CLUB</span></div>
+        </div>
         <div class="line">
-        <span>food|film|tech</span>
-        <p>Wholesome Cinema Club is equally at home cooking comfort food or serving up quality code. We believe in getting things done, to always look for creative solutions, and to never stop learning.</p>
+          <span id="home-nav" class="nav" style="display: none;">home</span><span id="work-nav" class="nav">work</span><span id="friends-nav" class="nav">friends</span><span id="food-nav" class="nav">food</span>
+          <div id="home" class="content">
+            <p>Wholesome Cinema Club is equally at home cooking comfort food or serving up quality code. We believe in getting things done, to always look for creative solutions, and to never stop learning.</p>
+          </div>
+          <div id="work" class="content" style="display: none;">
+            <p>Portfolio is coming soon! In the meantime have a look at <a href="https://www.linkedin.com/in/zebvandeven/" target="_blank">LinkedIn</a> for current projects and credentials</p>
+          </div>
+          <div id="friends" class="content" style="display: none;">
+            <p>Wholesome Cinema Club is proud to be friends with many talented people. An overview is coming soon.</p>
+          </div>
+          <div id="food" class="content" style="display: none;">
+            <p>Currently working on concepts to move food from "Coming Soon" to "Now Showing". Stay posted!</p>
+          </div>
         </div>
         <span>Now showing:</span>
         <div class="line">
@@ -24,7 +37,20 @@
           - Web development
         </div>
         <div class="line">
-          <a href="https://www.linkedin.com/in/zebvandeven/" target="_black"><span class="material-icons">assignment_ind</span></a> <a href="mailto:tickets@wholesomecinema.club" target="_black"><span class="material-icons">email</span></a> <span id="darkmode" class="material-icons">dark_mode</span>
+            <a href="https://www.linkedin.com/in/zebvandeven/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M0 0v24h24v-24h-24zm8 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.397-2.586 7-2.777 7 2.476v6.759z"/></svg> 
+            </a> 
+            <a href="mailto:tickets@wholesomecinema.club" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12.042 23.648c-7.813 0-12.042-4.876-12.042-11.171 0-6.727 4.762-12.125 13.276-12.125 6.214 0 10.724 4.038 10.724 9.601 0 8.712-10.33 11.012-9.812 6.042-.71 1.108-1.854 2.354-4.053 2.354-2.516 0-4.08-1.842-4.08-4.807 0-4.444 2.921-8.199 6.379-8.199 1.659 0 2.8.876 3.277 2.221l.464-1.632h2.338c-.244.832-2.321 8.527-2.321 8.527-.648 2.666 1.35 2.713 3.122 1.297 3.329-2.58 3.501-9.327-.998-12.141-4.821-2.891-15.795-1.102-15.795 8.693 0 5.611 3.95 9.381 9.829 9.381 3.436 0 5.542-.93 7.295-1.948l1.177 1.698c-1.711.966-4.461 2.209-8.78 2.209zm-2.344-14.305c-.715 1.34-1.177 3.076-1.177 4.424 0 3.61 3.522 3.633 5.252.239.712-1.394 1.171-3.171 1.171-4.529 0-2.917-3.495-3.434-5.246-.134z"/></svg>         
+            </a> 
+            <span id="lights">
+            <span class="lights" id="darkmode" style="display:none;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path class="st0" d="M12,2C9.5,3.4,7.9,6,7.9,9.1c0,4.5,3.7,8.2,8.2,8.2c2.1,0,4.1-0.8,5.6-2.2c0.7-0.7,1.6-0.2,1.3,0.6c-1.5,4.4-5.7,7.5-10.6,7.5C6.1,23.2,1,18.2,1,12C1,6,5.7,1.1,11.6,0.8C12.6,0.7,12.9,1.4,12,2L12,2z"/></svg>
+            </span>
+            <span class="lights" id="lightmode">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M4.069 13h-4.069v-2h4.069c-.041.328-.069.661-.069 1s.028.672.069 1zm3.034-7.312l-2.881-2.881-1.414 1.414 2.881 2.881c.411-.529.885-1.003 1.414-1.414zm11.209 1.414l2.881-2.881-1.414-1.414-2.881 2.881c.528.411 1.002.886 1.414 1.414zm-6.312-3.102c.339 0 .672.028 1 .069v-4.069h-2v4.069c.328-.041.661-.069 1-.069zm0 16c-.339 0-.672-.028-1-.069v4.069h2v-4.069c-.328.041-.661.069-1 .069zm7.931-9c.041.328.069.661.069 1s-.028.672-.069 1h4.069v-2h-4.069zm-3.033 7.312l2.88 2.88 1.415-1.414-2.88-2.88c-.412.528-.886 1.002-1.415 1.414zm-11.21-1.415l-2.88 2.88 1.414 1.414 2.88-2.88c-.528-.411-1.003-.885-1.414-1.414zm6.312-10.897c-3.314 0-6 2.686-6 6s2.686 6 6 6 6-2.686 6-6-2.686-6-6-6z"/></svg>
+            </span>
+            </span>
         </div>
         <div class="copyright">© wholesomecinemaclub</div>
       </div>
