--- a/cv/CV2023.html
+++ b/cv/CV2023.html
@@ -44,7 +44,7 @@
         .block{
             display: inline-block;
             vertical-align: top;
-            padding-bottom: 20px;
+            padding-top: 20px;
             text-align: left;
         }
 
@@ -95,7 +95,7 @@
 
         .col{
             width: 280px;
-            padding: 20px;
+            padding: 0 20px;
             display: inline-block;
             vertical-align: top;
         }
@@ -104,13 +104,14 @@
             color: #fff;
     background: #FF3132;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-top: 20px;
         }
 
 
         .legal{
             margin: 0 auto;
             font-size: 12px;
+            padding-top: 40px;
         }
 
         .hidden {
