--- a/cv/CV2023.html
+++ b/cv/CV2023.html
@@ -242,7 +242,7 @@ CRM technology/development and CX/UX design. Currently located in Amsterdam and 
 </div>
 
 </div>
-<div class="legal"><a href="https://www.wholesomecinema.club" target="_blank">© wholesome cinema club</a></div>
+<div class="legal"><a href="https://www.wholesomecinema.club" target="_blank" alt="wholesome cinema club" aria-label="Site by Wholesome Cinema Club">© wholesome cinema club</a></div>
 </div>
 
     <script>
